change header wrapper

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ includes a header with a logo and a mobile version of the navigation bar. The na
 created using an unordered list and styled using CSS. The mobile version of the navigation bar is
 hidden by default and can be toggled using JavaScript. -->
        
-    <div class="Header-about">
+    <div class="Header-wrapper">
             <nav class="Nav">
                 <ul class="Nav-ul">
                     <li class="Nav-li"><a href="index.html" title="home" >home</a></li>
